Analysis is no longer configurable.